--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.devsamar.timer_tracker_flutter_course.time_tracker_flutter_course">
+    package="com.devsamar.timer_tracker_flutter_course">
    <application
         android:label="time_tracker_flutter_course"
         android:icon="@mipmap/ic_launcher">
