--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^5.0.0
   firebase_core: ^1.2.0
   firebase_auth: ^1.2.0
+  google_sign_in: ^5.0.3
 
 dev_dependencies:
   flutter_test:
